@@ -22,8 +22,8 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.apache.commons</groupId>
-    <artifactId>commons-parent</artifactId>
-    <version>21</version>
+     <artifactId>commons-parent</artifactId>
+     <version>21</version>
   </parent>
   <groupId>org.apache.jcs</groupId>
   <artifactId>jcs</artifactId>
@@ -121,7 +121,6 @@
       <optional>true</optional>
     </dependency>
 
-
     <!-- LGPL! -->
     <!--
     <dependency>
@@ -197,22 +196,23 @@
     </dependency>
 
     <dependency>
-    	<groupId>commons-httpclient</groupId>
-    	<artifactId>commons-httpclient</artifactId>
-    	<version>3.0.1</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    	<optional>true</optional>
+       <groupId>commons-httpclient</groupId>
+       <artifactId>commons-httpclient</artifactId>
+       <version>3.0.1</version>
+       <type>jar</type>
+       <scope>compile</scope>
+       <optional>true</optional>
     </dependency>
-    
+
     <dependency>
-    	<groupId>javax.servlet</groupId>
-    	<artifactId>servlet-api</artifactId>
-    	<version>2.3</version>
-    	<type>jar</type>
-    	<scope>compile</scope>
-    	<optional>true</optional>
+       <groupId>javax.servlet</groupId>
+       <artifactId>servlet-api</artifactId>
+       <version>2.3</version>
+       <type>jar</type>
+       <scope>compile</scope>
+       <optional>true</optional>
     </dependency>
+
   </dependencies>
 
   <!-- We don't use Continuum yet -->
@@ -232,7 +232,7 @@
   <distributionManagement>
 
    <!--
-     This POM's parent POM (the Apache Commons POM) provides repositories. Unfortunately,
+     This POM's parent POM (the Apache root POM) provides repositories. Unfortunately,
      this allows for accidental deployments. So we disable them here by providing
      a dummy repository. Use "mvn -Prc deploy" (Apache snapshot repository) or
      "mvn -Prelease deploy" (Apache release repository), if you really want to deploy.
@@ -274,13 +274,13 @@
       <archive>http://mail-archives.apache.org/mod_mbox/jakarta-jcs-dev/</archive>
     </mailingList>
     <mailingList>
-      <name>Old User List Archive</name>
+      <name>OLD User List Archive</name>
       <subscribe></subscribe>
       <unsubscribe></unsubscribe>
       <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-user/</archive>
     </mailingList>
     <mailingList>
-      <name>Old Developer List Archive</name>
+      <name>OLD Developer List Archive</name>
       <subscribe></subscribe>
       <unsubscribe></unsubscribe>
       <archive>http://mail-archives.apache.org/mod_mbox/jakarta-turbine-jcs-dev/</archive>
@@ -343,10 +343,22 @@
             </includes>
         </testResource>
     </testResources>
-    <plugins>
-      <plugin>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <encoding>${maven.compile.sourceEncoding}</encoding>
+            <source>${maven.compile.source}</source>
+            <target>${maven.compile.target}</target>
+          </configuration>
+        </plugin>
+        <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.11</version>
           <configuration>
             <argLine>-Xmx256m -Djava.security.manager -Djava.security.policy=${basedir}/src/conf/cache.policy</argLine>
             <forkMode>pertest</forkMode>
@@ -369,56 +381,71 @@
                 <!-- <exclude>**/JDBCDiskCacheRemovalUnitTest.java</exclude> -->
                 <!-- <exclude>**/JDBCDiskCacheUnitTest.java</exclude> -->
             </excludes>
+            <source>${maven.compile.source}</source>
           </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <configuration>
-          <archive>
-            <manifestEntries>
-              <Specification-Title>${project.name}</Specification-Title>
-              <Specification-Version>${project.version}</Specification-Version>
-              <Specification-Vendor>${project.organization.name}</Specification-Vendor>
-              <Implementation-Title>${project.name}</Implementation-Title>
-              <Implementation-Version>${project.version}</Implementation-Version>
-              <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
-              <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
-              <X-Compile-Source-JDK>${maven.compile.source}</X-Compile-Source-JDK>
-              <X-Compile-Target-JDK>${maven.compile.source}</X-Compile-Target-JDK>
-            </manifestEntries>
-          </archive>
-        </configuration>
-      </plugin>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-jar-plugin</artifactId>
+          <version>2.3.2</version>
+          <configuration>
+            <archive>
+              <manifestEntries>
+                <Specification-Title>${project.name}</Specification-Title>
+                <Specification-Version>${project.version}</Specification-Version>
+                <Specification-Vendor>${project.organization.name}</Specification-Vendor>
+                <Implementation-Title>${project.name}</Implementation-Title>
+                <Implementation-Version>${project.version}</Implementation-Version>
+                <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+                <Implementation-Vendor-Id>org.apache</Implementation-Vendor-Id>
+                <X-Compile-Source-JDK>${project.build.source}</X-Compile-Source-JDK>
+                <X-Compile-Target-JDK>${project.build.target}</X-Compile-Target-JDK>
+              </manifestEntries>
+            </archive>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-source-plugin</artifactId>
+          <version>2.1.2</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-javadoc-plugin</artifactId>
+          <version>2.8</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-gpg-plugin</artifactId>
+          <version>1.4</version>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>rmic-maven-plugin</artifactId>
+          <version>1.1</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+    <plugins>
+      <!-- We need to generate some stub/skel classes with RMIC -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>rmic-maven-plugin</artifactId>
-        <version>1.1</version>
         <executions>
-            <execution>
-                <id>rmic-process-classes</id>
-                <goals>
-                    <goal>rmic</goal>
-                </goals>
-                <configuration>
-                    <outputDirectory>${project.build.outputDirectory}</outputDirectory>
-                    <includes>
-                        <include>org.apache.jcs.auxiliary.remote.RemoteCacheListener</include>
-                        <include>org.apache.jcs.auxiliary.remote.server.RemoteCacheServer</include>
-                    </includes>
-                </configuration>
-            </execution>
+          <execution>
+            <id>rmic</id>
+            <goals>
+              <goal>rmic</goal>
+            </goals>
+            <configuration>
+              <includes>
+                <include>**/RemoteCacheListener.class</include>
+                <include>**/RemoteCacheServer.class</include>
+              </includes>
+              <outputDirectory>${project.build.outputDirectory}</outputDirectory>
+            </configuration>
+          </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <artifactId>maven-assembly-plugin</artifactId>
-        <configuration>
-          <descriptors>
-            <descriptor>src/assembly/bin.xml</descriptor>
-            <descriptor>src/assembly/src.xml</descriptor>
-          </descriptors>
-          <tarLongFileMode>gnu</tarLongFileMode>
-        </configuration>
       </plugin>
     </plugins>
   </build>
@@ -427,16 +454,52 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-javadoc-plugin</artifactId>
+        <version>2.8</version>
+        <configuration>
+          <aggregate>true</aggregate>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jxr-plugin</artifactId>
+        <version>2.3</version>
+        <configuration>
+          <aggregate>true</aggregate>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-report-plugin</artifactId>
+        <version>2.11</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>jdepend-maven-plugin</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0-beta-2</version>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>rat-maven-plugin</artifactId>
+        <version>1.0-alpha-3</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-pmd-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <targetJdk>1.5</targetJdk>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>findbugs-maven-plugin</artifactId>
+        <version>2.3.2</version>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -456,19 +519,6 @@
           </reportSet>
         </reportSets>
       </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-pmd-plugin</artifactId>
-        <version>2.5</version>
-        <configuration>
-          <targetJdk>1.5</targetJdk>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <version>2.3.2</version>
-      </plugin>
     </plugins>
   </reporting>
 
@@ -484,6 +534,33 @@
       </distributionManagement>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <forkMode>pertest</forkMode>
+              <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/conf/cache.policy -Xms256m -Xmx256m</argLine>
+            <includes>
+              <include>**/*${test.type}Test.java</include>
+            </includes>
+            <excludes>
+              <!-- Several of the test cases rely on background -->
+              <!-- tasks that are timing sensitive. -->
+              <!-- You need to manually run these test cases. -->
+              <!-- The ones that fail may be different for you. -->
+              <exclude>**/BlockDiskElementDescriptorUnitTest.java</exclude>
+              <exclude>**/HSQLDiskCacheConcurrentUnitTest.java</exclude>
+              <exclude>**/HSQLDiskCacheUnitTest.java</exclude>
+              <exclude>**/IndexedDiskCacheOptimizationUnitTest.java</exclude>
+              <exclude>**/TestTCPLateralUnitTest.java</exclude>
+              <exclude>**/UDPDiscoveryUnitTest.java</exclude>
+              <!--
+              <exclude>**/JDBCDiskCacheRemovalUnitTest.java</exclude>
+              <exclude>**/JDBCDiskCacheUnitTest.java</exclude>
+              -->
+            </excludes>
+            </configuration>
+          </plugin>
           <!-- We want to sign the artifact, the POM, and all attached artifacts -->
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
@@ -522,11 +599,18 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
-                <configuration>
-                  <source>${maven.compile.source}</source>
-                </configuration>
               </execution>
             </executions>
+          </plugin>
+          <plugin>
+            <artifactId>maven-assembly-plugin</artifactId>
+            <configuration>
+              <descriptors>
+                <descriptor>src/assembly/bin.xml</descriptor>
+                <descriptor>src/assembly/src.xml</descriptor>
+              </descriptors>
+              <tarLongFileMode>gnu</tarLongFileMode>
+            </configuration>
           </plugin>
         </plugins>
       </build>
@@ -547,8 +631,36 @@
       </distributionManagement>
       <build>
         <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <forkMode>pertest</forkMode>
+              <argLine>-Djava.security.manager -Djava.security.policy=${basedir}/src/conf/cache.policy -Xms256m -Xmx256m</argLine>
+            <includes>
+              <include>**/*${test.type}Test.java</include>
+            </includes>
+            <excludes>
+              <!-- Several of the test cases rely on background -->
+              <!-- tasks that are timing sensitive. -->
+              <!-- You need to manually run these test cases. -->
+              <!-- The ones that fail may be different for you. -->
+              <exclude>**/BlockDiskElementDescriptorUnitTest.java</exclude>
+              <exclude>**/HSQLDiskCacheConcurrentUnitTest.java</exclude>
+              <exclude>**/HSQLDiskCacheUnitTest.java</exclude>
+              <exclude>**/IndexedDiskCacheOptimizationUnitTest.java</exclude>
+              <exclude>**/TestTCPLateralUnitTest.java</exclude>
+              <exclude>**/UDPDiscoveryUnitTest.java</exclude>
+              <!--
+              <exclude>**/JDBCDiskCacheRemovalUnitTest.java</exclude>
+              <exclude>**/JDBCDiskCacheUnitTest.java</exclude>
+              -->
+            </excludes>
+            </configuration>
+          </plugin>
           <!-- We want to sign the artifact, the POM, and all attached artifacts -->
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-gpg-plugin</artifactId>
             <configuration>
               <passphrase>${gpg.passphrase}</passphrase>
@@ -564,6 +676,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-source-plugin</artifactId>
             <executions>
               <execution>
@@ -575,6 +688,7 @@
             </executions>
           </plugin>
           <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-javadoc-plugin</artifactId>
             <executions>
               <execution>
@@ -582,9 +696,6 @@
                 <goals>
                   <goal>jar</goal>
                 </goals>
-                <configuration>
-                  <source>${maven.compile.source}</source>
-                </configuration>
               </execution>
             </executions>
           </plugin>
@@ -596,6 +707,7 @@
   <properties>
 
     <!-- Default configuration for compiler source and target JVM -->
+    <maven.compile.sourceEncoding>UTF-8</maven.compile.sourceEncoding>
   	<maven.compile.source>1.5</maven.compile.source>
   	<maven.compile.target>1.5</maven.compile.target>
 
@@ -616,6 +728,7 @@
     <commons.encoding>UTF-8</commons.encoding>
     <commons.javadoc.java.link>http://download.oracle.com/javase/1.5.0/docs/api/</commons.javadoc.java.link>
 
+    <test.type>Unit</test.type>
   </properties>
 
 </project>
